--- a/.ssh/config
+++ b/.ssh/config
@@ -1,6 +1,10 @@
 Host *
   ServerAliveInterval 120
 
+Host fugaku.KFAC
+  HostName fugaku.r-ccs.riken.jp
+  User u01612
+
 Host fugaku.NLP
   HostName fugaku.r-ccs.riken.jp
   User u01114
