ssh config abci

--- a/.ssh/config
+++ b/.ssh/config
@@ -18,9 +18,20 @@ Host fugaku.primal
   User u93143
 
 Host abci
+  StrictHostKeyChecking no
   HostName es
   User acc12262dj
   ProxyJump %r@as.abci.ai
+  IdentityFile ~/.ssh/id_rsa
+
+Host abci-a
+  HostName es-a
+  User acc12262dj
+  ProxyJump %r@as.abci.ai
+  IdentityFile ~/.ssh/id_rsa
+
+Host as.abci.ai
+  IdentityFile ~/.ssh/id_rsa
 
 Host cloud.r-ccs
   HostName login.cloud.r-ccs.riken.jp
