--- a/.ssh/config
+++ b/.ssh/config
@@ -18,10 +18,10 @@ Host fugaku.primal
   User u93143
 
 Host abci
-  StrictHostKeyChecking no
   HostName es
   User acc12262dj
   ProxyJump %r@as.abci.ai
+  HostKeyAlgorithms ssh-rsa,ssh-ed25519
   IdentityFile ~/.ssh/id_rsa
 
 Host abci-a
