Rename fugaku entry in `.ssh/config`

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,6 +1,10 @@
 Host *
   ServerAliveInterval 120
 
+Host fugaku
+  HostName fugaku.r-ccs.riken.jp
+  User a04082
+
 Host fugaku.KFAC
   HostName fugaku.r-ccs.riken.jp
   User u01612
@@ -8,10 +12,6 @@ Host fugaku.KFAC
 Host fugaku.NLP
   HostName fugaku.r-ccs.riken.jp
   User u01114
-
-Host fugaku.fs2020
-  HostName fugaku.r-ccs.riken.jp
-  User a04082
 
 Host fugaku.primal
   HostName fugaku.r-ccs.riken.jp
