Add new (unified) fugaku user account

--- a/.ssh/config
+++ b/.ssh/config
@@ -3,6 +3,10 @@ Host *
 
 Host fugaku
   HostName fugaku.r-ccs.riken.jp
+  User u10039
+
+Host fugaku.a04082
+  HostName fugaku.r-ccs.riken.jp
   User a04082
 
 Host fugaku.KFAC
