--- a/.ssh/config
+++ b/.ssh/config
@@ -38,6 +38,11 @@ Host cloud.r-ccs
   User emil.vatai
   IdentityFile ~/.ssh/shared_id
 
+Host lumi
+  HostName lumi.csc.fi
+  User evatai
+  IdentityFile ~/.ssh/id_ed25519_lumi
+
 Host c0.r-ccs27
   HostName c0.r-ccs27.riken.jp
   KexAlgorithms +diffie-hellman-group1-sha1
