Update kitty config

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -742,8 +742,7 @@
 
 #: The color for the border of the active window. Set this to none to
 #: not draw borders around the active window.
-
-inactive_border_color #111
+# inactive_border_color #111
 
 #: The color for the border of inactive windows.
 
@@ -1344,7 +1343,7 @@ background_opacity 0.9
 #: special value of ask means that kitty will ask before opening the
 #: link when clicked.
 
-# shell_integration enabled
+shell_integration disabled
 
 #: Enable shell integration on supported shells. This enables features
 #: such as jumping to previous prompts, browsing the output of the
@@ -2240,3 +2239,9 @@ map ctrl+shift+semicolon   change_font_size all +2.0
 #: }}}
 
 #: }}}
+
+
+# BEGIN_KITTY_THEME
+# Tomorrow
+include current-theme.conf
+# END_KITTY_THEME
