Update kitty theme

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2242,6 +2242,6 @@ map ctrl+shift+semicolon   change_font_size all +2.0
 
 
 # BEGIN_KITTY_THEME
-# Tomorrow
+# Tokyo Night
 include current-theme.conf
 # END_KITTY_THEME
