Add csgw to ssh config

--- a/.ssh/config
+++ b/.ssh/config
@@ -5,6 +5,10 @@ Host fugaku
   HostName fugaku.r-ccs.riken.jp
   User u10039
 
+Host fugaku.csgw
+  HostName csgw.fugaku.r-ccs.riken.jp
+  User u10039
+
 Host fugaku.a04082
   HostName fugaku.r-ccs.riken.jp
   User a04082
