--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -8,6 +8,7 @@
 
 # font_family      monospace
 # font_family      Iosevka Term Light
+font_family        Inconsolata-dz for Powerline
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
