Add sn30 to config

--- a/.ssh/config
+++ b/.ssh/config
@@ -37,6 +37,12 @@ Host abci-a
 Host as.abci.ai
   IdentityFile ~/.ssh/id_rsa
 
+Host sn30
+  HostName dc1-login3.sambanova.ai
+  Port 30601
+  User emil.vatai
+  IdentityFile ~/.ssh/shared_id
+
 Host cloud.r-ccs
   HostName login.cloud.r-ccs.riken.jp
   User emil.vatai
