--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2243,6 +2243,6 @@ map ctrl+shift+semicolon   change_font_size all +2.0
 
 
 # BEGIN_KITTY_THEME
-# Tokyo Night
+# Doom One
 include current-theme.conf
 # END_KITTY_THEME
