--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -1,59 +1,21 @@
-# vim:ft=kitty
-
-## name: Doom One
-## author: Henrik Lissner <https://github.com/hlissner>
-## license: MIT
-## blurb: Inspired by Atom's One Dark color scheme.
-
-# The basic colors
-foreground                      #bbc2cf
-background                      #282c34
-selection_foreground            #bbc2cf
-selection_background            #3f444a
-
-# Cursor colors
-cursor                          #bbc2cf
-cursor_text_color               #282c34
-
-# kitty window border colors
-active_border_color     #46D9FF
-inactive_border_color   #3f444a
-
-# Tab bar colors
-active_tab_foreground   #282c34
-active_tab_background   #DFDFDF
-inactive_tab_foreground #3f444a
-inactive_tab_background #5B6268
-
-# The basic 16 colors
-# black
-color0 #2a2e38
-color8 #3f444a
-
-# red
-color1 #ff6c6b
-color9 #ff6655
-
-# green
-color2  #98be65
-color10 #99bb66
-
-# yellow
-color3  #ECBE7B
-color11 #ECBE7B
-
-# blue
-color4  #51afef
-color12 #51afef
-
-# magenta
-color5  #c678dd
-color13 #c678dd
-
-# cyan
-color6  #46D9FF
-color14 #46D9FF
-
-# white
-color7  #DFDFDF
-color15 #bbc2cf
+background            #282420
+foreground            #e5c6a8
+cursor                #f6f6ec
+selection_background  #111417
+color0                #111417
+color8                #665e54
+color1                #c84134
+color9                #ff6459
+color2                #84c44b
+color10               #97e035
+color3                #f4ae2e
+color11               #dfd561
+color4                #1397b9
+color12               #5ed9ff
+color5                #d0623c
+color13               #ff9168
+color6                #4f9452
+color14               #83ef88
+color7                #e5c5a9
+color15               #f6f6ec
+selection_foreground #282420
