--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -666,6 +666,43 @@ font_family        Inconsolata for Powerline
 
 #: Window layout {{{
 
+enabled_layouts splits:split_axis=horizontal
+
+# Create a new window splitting the space used by the existing one so that
+# the two windows are placed one above the other
+map f5 launch --location=hsplit
+
+# Create a new window splitting the space used by the existing one so that
+# the two windows are placed side by side
+map f6 launch --location=vsplit
+
+# Create a new window splitting the space used by the existing one so that
+# the two windows are placed side by side if the existing window is wide or
+# one above the other if the existing window is tall.
+map f4 launch --location=split
+
+# Rotate the current split, chaging its split axis from vertical to
+# horizontal or vice versa
+map f7 layout_action rotate
+
+# Move the active window in the indicated direction
+map shift+up move_window up
+map shift+left move_window left
+map shift+right move_window right
+map shift+down move_window down
+
+# Move the active window to the indicated screen edge
+map ctrl+shift+up layout_action move_to_screen_edge top
+map ctrl+shift+left layout_action move_to_screen_edge left
+map ctrl+shift+right layout_action move_to_screen_edge right
+map ctrl+shift+down layout_action move_to_screen_edge bottom
+
+# Switch focus to the neighboring window in the indicated direction
+map ctrl+left neighboring_window left
+map ctrl+right neighboring_window right
+map ctrl+up neighboring_window up
+map ctrl+down neighboring_window down
+
 # remember_window_size  yes
 # initial_window_width  640
 # initial_window_height 400
@@ -992,7 +1029,7 @@ inactive_text_alpha 0.8
 
 #: The foreground and background colors.
 
-background_opacity 0.9
+# background_opacity 0.9
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
