Update kitty conf

--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -1,21 +1,21 @@
-background            #282420
-foreground            #e5c6a8
-cursor                #f6f6ec
-selection_background  #111417
-color0                #111417
-color8                #665e54
-color1                #c84134
-color9                #ff6459
-color2                #84c44b
-color10               #97e035
-color3                #f4ae2e
-color11               #dfd561
-color4                #1397b9
-color12               #5ed9ff
-color5                #d0623c
-color13               #ff9168
-color6                #4f9452
-color14               #83ef88
-color7                #e5c5a9
-color15               #f6f6ec
-selection_foreground #282420
+background            #2a1e1d
+foreground            #dfdab7
+cursor                #573d25
+selection_background  #563c27
+color0                #573d25
+color8                #9a6b49
+color1                #be2d26
+color9                #e84526
+color2                #6ba08a
+color10               #94d7ba
+color3                #e99c29
+color11               #d0d04f
+color4                #5a86ac
+color12               #b8d3ed
+color5                #ab80a6
+color13               #d09dca
+color6                #74a5ac
+color14               #92ced6
+color7                #dfdab7
+color15               #fff9d4
+selection_foreground #2a1e1d
