--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,8 +7,8 @@
 #: characters.
 
 # font_family      monospace
-# font_family      Iosevka Term Light
-font_family        Inconsolata for Powerline
+font_family      Iosevka Term Light
+# font_family        Inconsolata for Powerline
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
@@ -2280,6 +2280,6 @@ map ctrl+shift+semicolon   change_font_size all +2.0
 
 
 # BEGIN_KITTY_THEME
-# Earthsong
+# Birds Of Paradise
 include current-theme.conf
 # END_KITTY_THEME
