--- a/.ssh/config
+++ b/.ssh/config
@@ -4,6 +4,7 @@ Host *
 Host fugaku
   HostName fugaku.r-ccs.riken.jp
   User u10039
+  ForwardAgent yes
 
 Host fugaku.csgw
   HostName csgw.fugaku.r-ccs.riken.jp
