Key forwarding for cloud.r-ccs

--- a/.ssh/config
+++ b/.ssh/config
@@ -49,6 +49,7 @@ Host sn30
 Host cloud.r-ccs
   HostName login.cloud.r-ccs.riken.jp
   User emil.vatai
+  ForwardAgent yes
   IdentityFile ~/.ssh/shared_id
 
 Host lumi
