Add github user (emacs forge)

--- a/.gitconfig
+++ b/.gitconfig
@@ -6,3 +6,10 @@
 	defaultBranch = main
 [credential]
 	helper = store
+[filter "lfs"]
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
+	clean = git-lfs clean -- %f
+[github]
+	user = vatai
