Add git lfs section

--- a/.gitconfig
+++ b/.gitconfig
@@ -6,3 +6,8 @@
 	defaultBranch = main
 [credential]
 	helper = store
+[filter "lfs"]
+	required = true
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
