Updates after niku install

--- a/.ssh/config
+++ b/.ssh/config
@@ -50,7 +50,7 @@ Host cloud.r-ccs
   HostName login.cloud.r-ccs.riken.jp
   User emil.vatai
   ForwardAgent yes
-  IdentityFile ~/.ssh/shared_id
+  # IdentityFile ~/.ssh/id_shared_id
 
 Host lumi
   HostName lumi.csc.fi
