--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -199,10 +199,10 @@ misc {
 
 # https://wiki.hypr.land/Configuring/Variables/#input
 input {
-    kb_layout = jp
-    kb_variant =
+    kb_layout = us,us,jp,rs
+    kb_variant = ,dvp,,
     kb_model =
-    kb_options =
+    kb_options=ctrl:nocaps,grp:win_space_toggle
     kb_rules =
 
     follow_mouse = 1
