--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2280,6 +2280,6 @@ map ctrl+shift+semicolon   change_font_size all +2.0
 
 
 # BEGIN_KITTY_THEME
-# Birds Of Paradise
+# Tropical Neon
 include current-theme.conf
 # END_KITTY_THEME
