--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -47,6 +47,7 @@ $menu = wofi --show drun
 
 # exec-once = $terminal
 exec-once = nm-applet &
+exec-once = hyprsunset &
 exec-once = waybar & hyprpaper & firefox
 
 
