Update key bindings

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -35,6 +35,7 @@ monitor=,preferred,auto,auto
 # Set programs that you use
 $terminal = kitty
 $fileManager = kitty ranger
+$emacsClient = emacsclient -c
 $menu = wofi --show drun
 
 
@@ -200,8 +201,8 @@ misc {
 
 # https://wiki.hypr.land/Configuring/Variables/#input
 input {
-    kb_layout = us,us,jp,rs
-    kb_variant = ,dvp,,
+    kb_layout = jp,us,us,rs
+    kb_variant = ,,dvp,
     kb_model =
     kb_options=ctrl:nocaps,grp:win_space_toggle
     kb_rules =
@@ -239,10 +240,12 @@ device {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
+bind = $mainMod SHIFT, T, exec, $terminal
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
-bind = $mainMod, E, exec, $fileManager
+bind = $mainMod SHIFT, E, exec, $fileManager
+bind = $mainMod, E, exec, $emacsClient
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
@@ -285,7 +288,7 @@ bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
-bind=SUPER,F,fullscreen
+bind = SUPER,F,fullscreen
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
