--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -47,9 +47,11 @@ $menu = wofi --show drun
 # Or execute your favorite apps at launch like this:
 
 # exec-once = $terminal
-exec-once = nm-applet &
-exec-once = hyprsunset &
-exec-once = waybar & hyprpaper & firefox
+exec-once = nm-applet
+exec-once = hyprsunset
+exec-once = hypridle
+exec-once = hyprpaper
+exec-once = waybar
 
 
 #############################
