--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -23,7 +23,7 @@
 ################
 
 # See https://wiki.hypr.land/Configuring/Monitors/
-monitor=,preferred,auto,auto
+monitor=,preferred,auto,1
 
 
 ###################
@@ -211,7 +211,7 @@ input {
 
     follow_mouse = 1
 
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = -0.5 # -1.0 - 1.0, 0 means no modification.
 
     touchpad {
         natural_scroll = false
