--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -37,6 +37,7 @@ $terminal = kitty
 $fileManager = kitty ranger
 $emacsClient = emacsclient -c
 $menu = wofi --show drun
+$browser = firefox
 
 
 #################
@@ -246,6 +247,7 @@ bind = $mainMod SHIFT, T, exec, $terminal
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
+bind = $mainMod, B, exec, $browser
 bind = $mainMod SHIFT, E, exec, $fileManager
 bind = $mainMod, E, exec, $emacsClient
 bind = $mainMod, V, togglefloating,
