--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -670,20 +670,20 @@ enabled_layouts splits:split_axis=horizontal
 
 # Create a new window splitting the space used by the existing one so that
 # the two windows are placed one above the other
-map f5 launch --location=hsplit
+map shift+f5 launch --location=hsplit
 
 # Create a new window splitting the space used by the existing one so that
 # the two windows are placed side by side
-map f6 launch --location=vsplit
+map shift+f6 launch --location=vsplit
 
 # Create a new window splitting the space used by the existing one so that
 # the two windows are placed side by side if the existing window is wide or
 # one above the other if the existing window is tall.
-map f4 launch --location=split
+map shift+f4 launch --location=split
 
 # Rotate the current split, chaging its split axis from vertical to
 # horizontal or vice versa
-map f7 layout_action rotate
+map shift+f7 layout_action rotate
 
 # Move the active window in the indicated direction
 map shift+up move_window up
