Some life improvements

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -34,6 +34,22 @@
         "custom/power"
     ],
     // Modules configuration
+    "hyprland/workspaces": {
+        "format": "{name}: {icon}",
+        "all-outputs": true,
+        "format-icons": {
+            "1": "",
+            "2": "",
+            "3": "",
+            "4": "",
+            "5": "",
+            "urgent": "",
+            "focused": "",
+            "default": ""
+        },
+        "on-scroll-up": "hyprctl dispatch workspace e+1",
+        "on-scroll-down": "hyprctl dispatch workspace e-1"
+    },
     // "sway/workspaces": {
     //     "disable-scroll": true,
     //     "all-outputs": true,
@@ -215,11 +231,6 @@
 			"suspend": "systemctl suspend",
 			"hibernate": "systemctl hibernate"
 		}
-    },
-    "hyprland/workspaces": {
-        "format": "{icon}",
-        "on-scroll-up": "hyprctl dispatch workspace e+1",
-        "on-scroll-down": "hyprctl dispatch workspace e-1"
     },
     "hyprland/language": {
         "format": "{short}-{variant}",
