--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -179,6 +179,10 @@ animations {
 # windowrule = rounding 0, floating:0, onworkspace:w[tv1]
 # windowrule = bordersize 0, floating:0, onworkspace:f[1]
 # windowrule = rounding 0, floating:0, onworkspace:f[1]
+windowrule = workspace 1, class:^(org.telegram.desktop|discord|Slack)$
+windowrule = workspace 2, class:^(kitty)$
+windowrule = workspace 3, class:^(emacs)$
+windowrule = workspace 4, class:^(firefox)$
 
 # See https://wiki.hypr.land/Configuring/Dwindle-Layout/ for more
 dwindle {
@@ -232,7 +236,7 @@ device {
 device {
   name = wacom-intuos-s-pen
   transform = 0
-  output = DP-2
+  output = 1
 }
 
 ###################
