--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -211,7 +211,7 @@ input {
     kb_layout = jp,us,us,rs
     kb_variant = ,,dvp,
     kb_model =
-    kb_options=ctrl:nocaps,grp:win_space_toggle,compose:ralt
+    kb_options=caps:swapescape,grp:win_space_toggle,compose:ralt
     kb_rules =
 
     follow_mouse = 1
