--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -179,10 +179,6 @@ animations {
 # windowrule = rounding 0, floating:0, onworkspace:w[tv1]
 # windowrule = bordersize 0, floating:0, onworkspace:f[1]
 # windowrule = rounding 0, floating:0, onworkspace:f[1]
-windowrule = workspace 1, class:^(org.telegram.desktop|discord|Slack)$
-windowrule = workspace 2, class:^(kitty)$
-windowrule = workspace 3, class:^(emacs)$
-windowrule = workspace 4, class:^(firefox)$
 
 # See https://wiki.hypr.land/Configuring/Dwindle-Layout/ for more
 dwindle {
@@ -211,7 +207,7 @@ input {
     kb_layout = jp,us,us,rs
     kb_variant = ,,dvp,
     kb_model =
-    kb_options=caps:swapescape,grp:win_space_toggle,compose:ralt
+    kb_options=ctrl:nocaps,grp:win_space_toggle,compose:ralt
     kb_rules =
 
     follow_mouse = 1
@@ -231,12 +227,6 @@ gesture = 3, horizontal, workspace
 device {
     name = epic-mouse-v1
     sensitivity = -0.5
-}
-
-device {
-  name = wacom-intuos-s-pen
-  transform = 0
-  output = 1
 }
 
 ###################
@@ -332,3 +322,14 @@ windowrule = suppressevent maximize, class:.*
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
+
+windowrule = workspace 1, class:^(org.telegram.desktop|discord|Slack)$
+windowrule = workspace 2, class:^(kitty)$
+windowrule = workspace 3, class:^(emacs)$
+windowrule = workspace 4, class:^(firefox)$
+
+windowrule = float, class:com-group_finity-mascot-Main
+windowrule = noblur, class:com-group_finity-mascot-Main
+windowrule = nofocus, class:com-group_finity-mascot-Main
+windowrule = noshadow, class:com-group_finity-mascot-Main
+windowrule = noborder, class:com-group_finity-mascot-Main
