--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -207,7 +207,7 @@ input {
     kb_layout = jp,us,us,rs
     kb_variant = ,,dvp,
     kb_model =
-    kb_options=ctrl:nocaps,grp:win_space_toggle,compose:ralt
+    kb_options=caps:swapescape,grp:win_space_toggle,compose:ralt
     kb_rules =
 
     follow_mouse = 1
@@ -217,6 +217,11 @@ input {
     touchpad {
         natural_scroll = false
     }
+}
+
+device {
+    name=pfu-limited--hhkb-professional-jp
+    kb_options=grp:win_space_toggle,compose:ralt
 }
 
 # See https://wiki.hypr.land/Configuring/Gestures
