--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -207,13 +207,10 @@ input {
     kb_layout = jp,us,us,rs
     kb_variant = ,,dvp,
     kb_model =
-    kb_options=caps:swapescape,grp:win_space_toggle,compose:ralt
+    kb_options=ctrl:swapcaps,grp:win_space_toggle,compose:ralt
     kb_rules =
-
     follow_mouse = 1
-
     sensitivity = -0.5 # -1.0 - 1.0, 0 means no modification.
-
     touchpad {
         natural_scroll = false
     }
