--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -47,7 +47,12 @@ $browser = firefox
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-# exec-once = $terminal
+exec-once = $terminal
+exec-once = $emacsClient
+exec-once = $browser
+exec-once = Telegram
+exec-once = discord
+exec-once = slack
 exec-once = nm-applet
 exec-once = hyprsunset
 exec-once = hypridle
